Add basic 2fa support on its own route, as well as more openapi stuff
